fix overflow

--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 body{
 	overflow:hidden;
+
 }
 a{
 	text-decoration:  none;
@@ -23,6 +24,7 @@ a:visited{
 .page{
 	width:100%;
 	height:100%;
+	overflow: auto;
 }
 
 #logo{
